--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
       "subtitle": "Sets source for kef",
       "description": "Set the source of the kef (wifi, bluetooth, tv, optical, usb, aux)",
       "mode": "view"
-    }
-  ,
+    },
     {
       "name": "set-volume-menubar",
       "title": "Set Volume Menubar",
@@ -29,7 +28,7 @@
       "description": "Set volume of the Kef speaker through menu bar",
       "mode": "menu-bar"
     }
-      ],
+  ],
   "tools": [
     {
       "name": "set-volume",
@@ -39,8 +38,7 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.100.3",
-    "@raycast/utils": "^1.17.0",
-    "es-toolkit": "^1.39.5"
+    "@raycast/utils": "^1.17.0"
   },
   "devDependencies": {
     "@raycast/eslint-config": "^2.0.4",
