--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "kef-control",
-  "title": "Kef Control",
-  "description": "Control Kef LSX2",
+  "title": "Control Kef",
+  "description": "Control Kef LSX2 through Raycast",
   "icon": "extension-icon.png",
   "author": "ho991217",
   "license": "MIT",
+  "categories": [
+    "Productivity",
+    "Applications"
+  ],
   "commands": [
     {
       "name": "set-volume",
@@ -62,7 +66,7 @@
       "type": "textfield",
       "required": true,
       "title": "IP Address",
-      "description": "The IP address of the KEF LSX2",
+      "description": "KEF CONNECT APP > Settings > Select Speaker > info icon > IP Address",
       "default": "192.168.0.35"
     }
   ],
