--- a/package.json
+++ b/package.json
@@ -66,8 +66,8 @@
       "type": "textfield",
       "required": true,
       "title": "IP Address",
-      "description": "KEF CONNECT APP > Settings > Select Speaker > info icon > IP Address",
-      "default": "192.168.0.35"
+      "description": "KEF CONNECT App > Settings > Select Speaker > info icon > IP Address",
+      "placeholder": "Your KEF Speaker IP Address"
     }
   ],
   "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
